--- a/appspec.yml
+++ b/appspec.yml
@@ -1,10 +1,13 @@
 version: 0.0
 os: windows
+files:
+  - source: \
+    destination: C:\Users\Administrator\Downloads\Command
 hooks:
   BeforeInstall:
   AfterInstall:
   ApplicationStart:
-    - location: C:/Users/Administrator/Downloads/Command/start.ps
+    - location: start.ps
       timeout: 300
       runas: Administrator
   ApplicationStop:
