--- a/appspec.yml
+++ b/appspec.yml
@@ -4,7 +4,7 @@ hooks:
   BeforeInstall:
   AfterInstall:
   ApplicationStart:
-    - location: start.ps
+    - location: start.bat
       timeout: 300
       runas: Administrator
   ApplicationStop:
