--- a/appspec.yml
+++ b/appspec.yml
@@ -1,5 +1,8 @@
 version: 0.0
 os: windows
+files:
+  - source: \
+    destination: C:\Users\Administrator\Downloads\Pkg
 hooks:
   BeforeInstall:
   AfterInstall:
