--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,6 +10,7 @@ phases:
             - dotnet build 
             - dotnet publish
             - cp appspec.yml bin/Debug/netcoreapp3.1
+            - cp start.bat bin/Debug/netcoreapp3.1
             - zip -r output.zip bin
             - pwd
             - ls
