--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,11 +9,11 @@ phases:
             - dotnet --info
             - dotnet publish -c Release -r win10-x64
             - cp appspec.yml bin/Debug/netcoreapp3.1
-            - cp start.bat bin/Debug/netcoreapp3.1/win10-x64
+            - cp start.bat bin/Release/netcoreapp3.1/win10-x64
             - zip -r output.zip bin
             - pwd
             - ls
 artifacts:
-    base-directory: bin/Debug/netcoreapp3.1/win10-x64
+    base-directory: bin/Release/netcoreapp3.1/win10-x64
     files:
         - '**/*'
